[package]
name = "pvp_game"
version = "0.1.0"
description = "Skill-based PVP game escrow program on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "pvp_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[dev-dependencies]
anchor-client = "0.32.1"
